cambio de inconos sección acerca de mi, cambio de imagenes y texto sección trabajos, cambio bajada sección contacto, cambio de color por success.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="Hero-Section" class="text-white text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
                     Codigo desde el <br> fin del mundo
                 </h1>
                 <p class="my-5">
-                    Da vida a las ideas con el código! Ingeniero Superior Web. Desarrollador creativo. Creador de contenido. Especialista caprichoso. Ponente internacional. Ex-Google.
+                    Desarrollamos software personalizados capaces de gestionar y analizar información.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -70,40 +70,30 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Da vida a las ideas con el código! Ingeniero Superior Web. Desarrollador creativo. Creador de contenido. Especialista caprichoso. Ponente internacional. Ex-Google.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Computer Vision</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Un servicio de inteligencia artificial que analiza el contenido de imágenes y vídeos en tiempo real.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Data Science</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    El servicio Data Science analiza grandes volúmenes de información estructurada y no estructurada para generar y descubrir valiosos insights sobre una problemática de negocio..
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Robotic Process</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    aplicación de tecnología que permite configurar un “robot”, para capturar e interpretar aplicaciones ya existentes, con el fin de automatizarla.
                 </p>
             </div>
         </div>
