--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -56,8 +56,8 @@
                     Desarrollamos software personalizados capaces de gestionar y analizar información.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-outline-success text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-success text-light">Contacto</button>
                 </div>
             </div>
         </div>
@@ -83,14 +83,14 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
+                <i class="fas fa-database fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Data Science</h3>
                 <p class="my-3">
                     El servicio Data Science analiza grandes volúmenes de información estructurada y no estructurada para generar y descubrir valiosos insights sobre una problemática de negocio..
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
+                <i class="far fa-robot fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Robotic Process</h3>
                 <p class="my-3">
                     aplicación de tecnología que permite configurar un “robot”, para capturar e interpretar aplicaciones ya existentes, con el fin de automatizarla.
@@ -100,23 +100,22 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 bg-success">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/compvisi.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Identificación peatonal</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Identificicación del nivel de trafico y el riesgo al que se someten los conductores y 
+                            peatones en las principales avenidas de la capital del país, generando alertas para la 
+                            central de control.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
@@ -124,16 +123,15 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/modelbi.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Modelo de ocurrencia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Modelo estadistico aplicado en gestión de riesgos laborales al interior de un terminal
+                            portuario, califica el tipo de riesgo y el nivel de ocurrencia de un accidente, tomando
+                            en cuenta las condiciones ambientales.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
@@ -141,16 +139,15 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/rpa.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Automatización generación Ordenes</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Automatización del proceso de generación de ordenes de compra de una planta productiva
+                            de la zona central, a partir de solicitudes de pedido aprobadas, se logro una optimización
+                            del 50% en el tiempo destinado a esta tarea.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
@@ -166,11 +163,7 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">Agenda una reunión con nosotros!.</p>
 
         <form>
 
@@ -192,7 +185,7 @@
             </div>
 
             <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+                <button class="btn btn-success text-light">Enviar</button>
             </div>
 
 
@@ -204,7 +197,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Cristian Espinoza - 2023. Todos los derechos reservados.</p>
     </footer>
 
 
